# schemata

./: Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: doc.yml
doc/: index.html
doc/src/wordweaver_schemata/: lib.rs.html
doc/wordweaver_schemata/: constant.SUPPORTED.html  enum.Error.html  macro.schemata!.html  macro.versions!.html  macro.versions.html
doc/wordweaver_schemata/v0/: index.html  sidebar-items.js  struct.InformationDisclosure.html  struct.TrustExchange.html
implementors/arbitrary/: trait.Arbitrary.js
implementors/core/marker/: trait.Freeze.js  trait.Unpin.js
implementors/wordweaver_schemata/: trait.Schemata.js
src/: lib.rs
src/v0/: conversation.rs  information_disclosure.rs  mod.rs  trust_exchange.rs
src/wordweaver_schemata/: lib.rs.html
src/wordweaver_schemata/v0/: conversation.rs.html  information_disclosure.rs.html  mod.rs.html  trust_exchange.rs.html
wordweaver_schemata/: all.html  constant.SUPPORTED.html  enum.Error.html  fn.deserialize_as.html  fn.serialize_as.html  index.html  macro.schemata.html  macro.versions.html  sidebar-items.js  trait.Schemata.html  trait.SchemataTrait.html
wordweaver_schemata/v0/: constant.VERSION.html  fn.deserialize.html  fn.serialize.html  index.html  sidebar-items.js  struct.Conversation.html  struct.InformationDisclosure.html  struct.TrustExchange.html
wordweaver_schemata/v0/conversation/: struct.Conversation.html
wordweaver_schemata/v0/information_disclosure/: struct.InformationDisclosure.html
(+10 files in other folders)
