[package]
name = "wordweaver-schemata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_cbor = "*"
arbitrary = { version = "*", optional = true, features = ["derive"] }

[features]
default = []
arbitrary_gen = ["arbitrary"]
